--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.licenta" >
+    package="com.example.licenta">
 
     <application
         android:allowBackup="true"
@@ -8,8 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".Activities.SignUpActivity"></activity>
+        <activity android:name=".Activities.LoginActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Activities.ProfileActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
