Added Conection Between the HomePage and the Year Group posts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.LoginActivity"></activity>
+        <activity android:name=".Activities.YearGroupActivity" />
         <activity
             android:name=".Activities.SplashActivity"
             android:label="@string/title_activity_home" />
@@ -17,7 +17,7 @@
         <activity android:name=".Activities.EditProfileActivity" />
         <activity android:name=".Activities.HomeActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".Activities.YearGroupActivity">
+        <activity android:name=".Activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
