--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.OnePostActivity"></activity>
-        <activity android:name=".Activities.LoginActivity" />
+        <activity android:name=".Activities.ForgetPasswordActivity"></activity>
+        <activity android:name=".Activities.OnePostActivity" />
+        <activity android:name=".Activities.OneScheduleActivity" />
         <activity android:name=".Activities.ParkingActivity" />
         <activity android:name=".Activities.YearGroupActivity" />
         <activity
@@ -20,7 +21,7 @@
         <activity android:name=".Activities.EditProfileActivity" />
         <activity android:name=".Activities.HomeActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".Activities.OneScheduleActivity">
+        <activity android:name=".Activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
