--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.ForgetPasswordActivity"></activity>
+        <activity android:name=".Activities.AddPostActivity"></activity>
+        <activity android:name=".Activities.ForgetPasswordActivity" />
         <activity android:name=".Activities.OnePostActivity" />
         <activity android:name=".Activities.OneScheduleActivity" />
         <activity android:name=".Activities.ParkingActivity" />
-        <activity android:name=".Activities.YearGroupActivity" />
+        <activity android:name=".Activities.LoginActivity" />
         <activity
             android:name=".Activities.SplashActivity"
             android:label="@string/title_activity_home" />
@@ -21,7 +22,7 @@
         <activity android:name=".Activities.EditProfileActivity" />
         <activity android:name=".Activities.HomeActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".Activities.LoginActivity">
+        <activity android:name=".Activities.YearGroupActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
