--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <provider android:authorities="com.facebook.app.FacebookContentProvider1826765624291580"
+            android:name="com.facebook.FacebookContentProvider"
+            android:exported="true" />
         <activity android:name=".Activities.SendMailActivity"></activity>
         <activity android:name=".Activities.AddPostActivity" />
         <activity android:name=".Activities.ForgetPasswordActivity" />
