--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/sigla2"
+        android:icon="@drawable/sigla"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/sigla2"
+        android:roundIcon="@drawable/sigla"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.AddEventActivity"></activity>
+        <activity android:name=".Activities.RegulamenteActivity"></activity>
+        <activity android:name=".Activities.AddEventActivity" />
         <activity android:name=".Activities.FindStudentActivity" />
         <activity android:name=".Activities.CalendarActivity" />
         <activity android:name=".Activities.SchedulesActivity" />
