--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,25 +2,45 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.licenta">
 
-    <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"
+        />
     <application
         android:allowBackup="true"
-        android:icon="@drawable/sigla"
+        android:icon="@drawable/sigla4"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/sigla"
+        android:roundIcon="@drawable/sigla4"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.RegulamenteActivity"></activity>
+        <activity android:name=".Activities.MapActivity"></activity>
+        <activity android:name=".Activities.OrarActivity" />
+        <activity android:name=".Activities.RegulamenteActivity" />
         <activity android:name=".Activities.AddEventActivity" />
         <activity android:name=".Activities.FindStudentActivity" />
         <activity android:name=".Activities.CalendarActivity" />
         <activity android:name=".Activities.SchedulesActivity" />
         <activity android:name=".Activities.NewsActivity" />
 
+<!--        <meta-data-->
+<!--            android:name="com.facebook.sdk.ApplicationId"-->
+<!--            android:value="@string/facebook_app_id" />-->
+
         <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCFjiuLy0L87Z7V4PNRJaqszUXfEpl3qZw" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <provider
             android:name="com.facebook.FacebookContentProvider"
@@ -34,14 +54,15 @@
         <activity android:name=".Activities.OneScheduleActivity" />
         <activity android:name=".Activities.ParkingActivity" />
         <activity android:name=".Activities.YearGroupActivity" />
+
         <activity
-            android:name=".Activities.SplashActivity"
+            android:name=".Activities.LoginActivity"
             android:label="@string/title_activity_home" />
         <activity android:name=".Activities.SignUpActivity" />
         <activity android:name=".Activities.EditProfileActivity" />
         <activity android:name=".Activities.HomeActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".Activities.LoginActivity">
+        <activity android:name=".Activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
