--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:roundIcon="@drawable/sigla4"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.P3Activity"></activity>
+        <activity android:name=".Activities.P3Activity"/>
         <activity android:name=".Activities.ContractStudiiActivity" />
         <activity android:name=".Activities.AddClassTimetableActivity" />
         <activity android:name=".Activities.MapActivity" />
@@ -30,12 +30,8 @@
         <activity android:name=".Activities.FindStudentActivity" />
         <activity android:name=".Activities.CalendarActivity" />
         <activity android:name=".Activities.SchedulesActivity" />
-        <activity android:name=".Activities.NewsActivity" /> <!-- <meta-data -->
-        <!-- android:name="com.facebook.sdk.ApplicationId" -->
-        <!-- android:value="@string/facebook_app_id" /> -->
-        <meta-data
-         android:name="com.facebook.sdk.ApplicationId"
-         android:value="@string/facebook_app_id" />
+        <activity android:name=".Activities.NewsActivity" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCFjiuLy0L87Z7V4PNRJaqszUXfEpl3qZw" />
