--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.maps.android:android-maps-utils:0.6.2'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
 }
