--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.android.databinding'
 
 android {
     compileSdkVersion 28
-
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
     testOptions {
         unitTests.returnDefaultValues = true
-    }
-    dataBinding {
-        enabled = true
     }
     defaultConfig {
         applicationId "com.example.licenta"
@@ -41,7 +40,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.maps.android:android-maps-utils:0.6.2'
