--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.google.firebase:firebase-crashlytics:17.0.1'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.2'
 }
