--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics:17.0.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.2'
-
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0-rc01'
 }
