--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.2'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0-rc01'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
+    implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
 }
